change pivot/unpivot var names to wide and long

--- a/PythonBootcamp/Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/Introduction_to_Pandas.ipynb
@@ -8674,7 +8674,7 @@
     "\n",
     "\n",
     "# try to keep your formatting legible by doing like so:\n",
-    "df_pivot = pd.melt(cleaned_df,\n",
+    "df_long = pd.melt(cleaned_df,\n",
     "                   id_vars=['Order ID', 'Segment', 'Category', 'Sub-Category', 'Product Name',\n",
     "                            'Product ID', 'Country', 'Market', 'Region', 'State', 'City',\n",
     "                            'Quantity', 'Discount', 'Profit', 'Customer ID', 'Customer Name',\n",
@@ -8706,7 +8706,7 @@
     "                        '12/1/2014', '8/1/2014', '5/1/2014', '3/1/2014', '4/1/2014',\n",
     "                        '2/1/2014', '6/1/2014']\n",
     "\n",
-    "df_pivot = pd.melt_(cleaned_df,\n",
+    "df_long = pd.melt_(cleaned_df,\n",
     "                    id_vars = columns_to_keep,\n",
     "                    value_vars = columns_to_transform\n",
     "                    var_name = \"Order Date\",\n",
@@ -9108,8 +9108,8 @@
     }
    ],
    "source": [
-    "# We can now see the new Dataframe, df_pivot\n",
-    "df_pivot"
+    "# We can now see the new Dataframe, df_long\n",
+    "df_long"
    ]
   },
   {
@@ -9142,7 +9142,7 @@
    "outputs": [],
    "source": [
     "# drop rows with empty values in the 'sales' column\n",
-    "df_pivot.dropna(subset=['Sales'],inplace=True)"
+    "df_long.dropna(subset=['Sales'],inplace=True)"
    ]
   },
   {
@@ -9198,7 +9198,9 @@
     "\n",
     "\n",
     "example: \n",
-    "    df.pivot(columns = ['columns])"
+    "    df.pivot(columns = ['columns])\n",
+    "\n",
+    "Note how this turns a long format dataframe into a wide format dataframe"
    ]
   },
   {
@@ -9333,10 +9335,10 @@
    ],
    "source": [
     "# get just the 'state' and 'Category' columns and turn the 'Category' column into rows \n",
-    "df_un_pivot = df_pivot[['State', 'Category']].pivot(columns='Category')\n",
+    "df_wide = df_long[['State', 'Category']].pivot(columns='Category')\n",
     "\n",
-    "# view the resulting dataframe\n",
-    "df_un_pivot"
+    "# view the resulting dataframe.\n",
+    "df_wide"
    ]
   },
   {
@@ -9742,7 +9744,7 @@
    "outputs": [],
    "source": [
     "# create the cost of goods column\n",
-    "df_pivot['COGS'] = df_pivot['Sales'] - df_pivot['Profit']"
+    "df_long['COGS'] = df_long['Sales'] - df_long['Profit']"
    ]
   },
   {
@@ -9856,7 +9858,7 @@
     }
    ],
    "source": [
-    "xtab = pd.crosstab(df_pivot['Order Priority'], columns=df_pivot['Ship Mode'])\n",
+    "xtab = pd.crosstab(df_long['Order Priority'], columns=df_long['Ship Mode'])\n",
     "\n",
     "# view the results\n",
     "xtab"
@@ -9997,7 +9999,7 @@
     "# and lets count as our aggregate function to count how many \n",
     "# Order IDs there are for each order priorty and shipping mode\n",
     "\n",
-    "pd.pivot_table(df_pivot, values =['Order ID'], index=['Order Priority'], columns=['Ship Mode'], aggfunc='count')"
+    "pd.pivot_table(df_long, values =['Order ID'], index=['Order Priority'], columns=['Ship Mode'], aggfunc='count')"
    ]
   },
   {
@@ -10103,11 +10105,11 @@
     }
    ],
    "source": [
-    "# subset the dataframe to just \"Region\" and \"COGS\" (cost of goods) from the df_pivot dataframe\n",
+    "# subset the dataframe to just \"Region\" and \"COGS\" (cost of goods) from the df_long dataframe\n",
     "# group by the \"Region\" column\n",
     "# use \"sum\" as the aggregator to get the total cost of all goods for a given region\n",
     "\n",
-    "agg_df = df_pivot[['Region', 'COGS']].groupby(by = 'Region').agg(['sum'])\n",
+    "agg_df = df_long[['Region', 'COGS']].groupby(by = 'Region').agg(['sum'])\n",
     "\n",
     "# view the resulting dataframe\n",
     "agg_df"
@@ -10206,7 +10208,7 @@
     "    \n",
     "Example: \n",
     "    \n",
-    "<code>df_pivot[['Region', 'COGS']].groupby(by = 'Region').agg(['sum']).plot((kind='bar', xlabel = \"Region\", ylabel = \"COGS\")</code> \n",
+    "<code>df_long[['Region', 'COGS']].groupby(by = 'Region').agg(['sum']).plot((kind='bar', xlabel = \"Region\", ylabel = \"COGS\")</code> \n",
     "    "
    ]
   },
@@ -10262,9 +10264,9 @@
    ],
    "source": [
     "# we want a horizontal bar plot of the sum of sales by state\n",
-    "# Similar to example 2, subset df_pivot to just \"state\" and \"sales\" \n",
+    "# Similar to example 2, subset df_long to just \"state\" and \"sales\" \n",
     "# then groupby 'state' & use 'sum' as the aggregator\n",
-    "df_agg = df_pivot[['State','Sales']].groupby('State').agg(['sum'])\n",
+    "df_agg = df_long[['State','Sales']].groupby('State').agg(['sum'])\n",
     "\n",
     "# then sort the values by both 'Sales' and 'sum'\n",
     "df_agg.sort_values(by=[('Sales', 'sum')], ascending = False, inplace=True)\n",
@@ -10302,7 +10304,7 @@
    ],
    "source": [
     "# aggregate the correct data & sort it\n",
-    "profit_by_state = df_pivot[['State', 'Profit']].groupby('State').agg(['sum'])\n",
+    "profit_by_state = df_long[['State', 'Profit']].groupby('State').agg(['sum'])\n",
     "profit_by_state.sort_values(by=[('Profit', 'sum')], ascending = False, inplace=True)\n",
     "\n",
     "# print state with highest profit\n",
@@ -10324,7 +10326,7 @@
    ],
    "source": [
     "# same process as above\n",
-    "sales_by_cust = df_pivot[['Customer Name', 'Sales']].groupby('Customer Name').agg(['sum'])\n",
+    "sales_by_cust = df_long[['Customer Name', 'Sales']].groupby('Customer Name').agg(['sum'])\n",
     "sales_by_cust.sort_values(by=[('Sales', 'sum')], ascending = False, inplace=True)\n",
     "\n",
     "# get the 3rd row\n",
