Add interpretations of seaborn errorbars.

--- a/PythonBootcamp/Intro_to_Data_Visualization.ipynb
+++ b/PythonBootcamp/Intro_to_Data_Visualization.ipynb
@@ -870,6 +870,11 @@
     "    \n",
     "**Description**:\n",
     "In descriptive statistics, a boxplot is a method for graphically demonstrating the locality, spread and skewness groups of numerical data through their quartiles. In addition to the box on a box plot, there can be lines (which are called whiskers) extending from the box indicating variability outside the upper and lower quartiles, thus, the plot is also termed as the box-and-whisker plot. Outliers that differ significantly from the rest of the dataset may be plotted as individual points beyond the whiskers on the box-plot.\n",
+    "\n",
+    "**Interpretation**:\n",
+    "* The line in the middle represents the median of the data\n",
+    "* The edges of the box represent the first and third quartile (Q1 and Q3) of the data, thus the whole box represents the middle 50% of the data, with 25% on either side outside the box\n",
+    "* The whiskers extend 1.5 times the inter-quartile range (IQR) on either side of the box. All data points outside the whiskers are considered outliers, and are plotted as individual points.\n",
     "    \n",
     "<img src=\"support_files/images/data_viz/viz_boxplot_distribution.png\" width=\"400\"/> \n",
     "\n",
@@ -2121,7 +2126,10 @@
     "    * “auto”: choose between brief or full representation based on number of levels.\n",
     "    * “brief”: numeric hue and size variables will be represented with a sample of evenly spaced values.\n",
     "    * “full\": every group will get an entry in the legend.\n",
-    "    * False: no legend data is added and no legend is drawn."
+    "    * False: no legend data is added and no legend is drawn.\n",
+    "    \n",
+    "**Note:**\n",
+    "* When there are multiple y-values for each x-value, seaborn will aggregate and compute the mean y-value, along with a 95% confidence interval around the mean."
    ]
   },
   {
