updated pca for loop to be more descriptive

--- a/PythonBootcamp/Intro_to_Data_Visualization.ipynb
+++ b/PythonBootcamp/Intro_to_Data_Visualization.ipynb
@@ -3504,13 +3504,13 @@
     "             list(cars_pca.columns.values)[column], \n",
     "             color='r')\n",
     "\n",
-    "for i in range(len(xs)):\n",
+    "for point in range(len(xs)):\n",
     "    # circles project documents (ie rows from csv) as points onto principle component axes\n",
-    "    plt.plot(xs[i], \n",
-    "             ys[i], \n",
+    "    plt.plot(xs[point], \n",
+    "             ys[point], \n",
     "             'bo', \n",
-    "             color=colors[origins[i]], alpha = 0.5)\n",
-    "    #plt.text(xs[i] * 1.2, ys[i] * 1.2, list(names)[i], color='b')\n",
+    "             color=colors[origins[point]], alpha = 0.5)\n",
+    "    #plt.text(xs[point] * 1.2, ys[point] * 1.2, list(names)[point], color='b')\n",
     "    \n",
     "plt.show()"
    ]
