--- a/PythonBootcamp/Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/Introduction_to_Pandas.ipynb
@@ -7685,20 +7685,13 @@
     "**Wide**\n",
     "* does not repeat values in a specific categorical column.\n",
     "* typically better for analysis\n",
-    "\n",
+    "* methods for creating(covered later): <code>df.pivot()</code> and <code>pd.pivot_table(df)</code> can reshape a long dataframe into a wide dataframe\n",
     "    \n",
     "**Long**\n",
     "* values repeat in a specific categorical column.\n",
     "* typically better for data visualization.\n",
-    "    "
+    "* methods for creating(covered later): <code>pd.melt(df)</code> can reshape a wide dataframe into a long dataframe "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -12016,7 +12009,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('vba_test')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -12030,7 +12023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.3"
   },
   "vscode": {
    "interpreter": {
