Replace for loop in PCA code section.

--- a/PythonBootcamp/07_Introduction_to_Data_Visualization.ipynb
+++ b/PythonBootcamp/07_Introduction_to_Data_Visualization.ipynb
@@ -3488,8 +3488,6 @@
     "## Note: scale values for arrows and text are a bit inelegant as of now,\n",
     "##       so feel free to play around with them\n",
     "\n",
-    "colors = {'US':'b', 'Europe':'g', 'Japan':'r'}\n",
-    "\n",
     "plt.figure(figsize=(20, 10))\n",
     "for column in range(len(xvector)):\n",
     "    # arrows project features (ie columns from csv) as vectors onto principle component axes\n",
@@ -3504,13 +3502,10 @@
     "             list(cars_pca.columns.values)[column], \n",
     "             color='r')\n",
     "\n",
-    "for point in range(len(xs)):\n",
-    "    # circles project documents (ie rows from csv) as points onto principle component axes\n",
-    "    plt.plot(xs[point], \n",
-    "             ys[point], \n",
-    "             'bo', \n",
-    "             color=colors[origins[point]], alpha = 0.5)\n",
-    "    #plt.text(xs[point] * 1.2, ys[point] * 1.2, list(names)[point], color='b')\n",
+    "# Plot data points, colored by origin\n",
+    "colors_dict = {'US':'b', 'Europe':'g', 'Japan':'r'}\n",
+    "colors = origins.replace(colors_dict)\n",
+    "plt.scatter(xs, ys, c=colors, alpha=0.5)\n",
     "    \n",
     "plt.show()"
    ]
