--- a/PythonBootcamp/08_Development_Tools.ipynb
+++ b/PythonBootcamp/08_Development_Tools.ipynb
@@ -202,7 +202,7 @@
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "<h2>Spyder</h2>\n",
     "\n",
-    "Spyder is an integrated development environment with many similarities to MATLAB's default environment. It is included with Anaconda and provides a more interactive approach to development. \n",
+    "Spyder is an integrated development environment with many similarities to MATLAB's default environment. It is included with <a href=\"https://www.anaconda.com/\">Anaconda</a> and provides a more interactive approach to development. \n",
     "\n",
     "Matlab + Notebook - like features:\n",
     "* Divide script into cells, execute in persistent process\n",
@@ -227,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
