--- a/PythonBootcamp/04_Introduction_To_Numpy.ipynb
+++ b/PythonBootcamp/04_Introduction_To_Numpy.ipynb
@@ -1140,7 +1140,7 @@
     "# For this example, we will read a CSV file containing electrode recordings from\n",
     "# a patch clamp experiment.\n",
     "import os\n",
-    "ephys_data = np.loadtxt(os.path.join(\"support_files\", \"sweeps.csv\"), delimiter=\",\", skiprows=1)\n",
+    "ephys_data = np.loadtxt(os.path.join(\"support_files\", \"datasets\", \"sweeps.csv\"), delimiter=\",\", skiprows=1)\n",
     "print(ephys_data.shape)"
    ]
   },
@@ -1503,7 +1503,7 @@
    "source": [
     "from PIL import Image\n",
     "import os\n",
-    "img = Image.open(os.path.join(\"..\", \"support_files\", \"neuron.jpg\"))\n",
+    "img = Image.open(os.path.join(\"support_files\", \"images\", \"neuron.jpg\"))\n",
     "\n",
     "# convert the image to an array and discard the blue/green channels\n",
     "# (the image is greyscale anyway, so we don't need color)\n",
@@ -1664,7 +1664,7 @@
    "source": [
     "# Load the neuron image again and display it with color derived from a lookup table\n",
     "import os\n",
-    "img = Image.open(os.path.join(\"..\", \"support_files\", \"neuron.jpg\"))\n",
+    "img = Image.open(os.path.join(\"support_files\", \"images\",\"neuron.jpg\"))\n",
     "img_data = np.array(img)[:, :, 0]\n",
     "\n",
     "# Construct a lookup table of RGB color values that transition from \n",
@@ -1827,7 +1827,7 @@
     "# Simple example: Let's take the same electrode recording data that we\n",
     "# loaded earlier and subtract off the baseline value from each recording\n",
     "import os\n",
-    "ephys_data = np.loadtxt(os.path.join(\"..\", \"support_files\", \"sweeps.csv\"), delimiter=\",\", skiprows=1)\n",
+    "ephys_data = np.loadtxt(os.path.join(\"support_files\", \"datasets\",\"sweeps.csv\"), delimiter=\",\", skiprows=1)\n",
     "tvals = ephys_data[:,0]\n",
     "ephys_data = ephys_data[:, 1:]\n",
     "\n",
