--- a/PythonBootcamp/04_Introduction_To_Numpy.ipynb
+++ b/PythonBootcamp/04_Introduction_To_Numpy.ipynb
@@ -94,9 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[7, 9, 1, 6, 5, 5, 5, 9, 1, 8, 8, 0, 8, 3, 3],\n",
+       " [5, 9, 0, 1, 2, 2, 2, 6, 9, 0, 7, 4, 8, 2, 9],\n",
+       " [7, 7, 8, 6, 5, 7, 4, 1, 0, 5, 9, 0, 7, 0, 0],\n",
+       " [3, 1, 2, 4, 9, 5, 3, 8, 2, 6, 7, 7, 6, 4, 9],\n",
+       " [0, 9, 3, 3, 9, 9, 1, 6, 2, 3, 6, 6, 9, 1, 5],\n",
+       " [7, 9, 1, 1, 6, 8, 0, 0, 7, 2, 7, 7, 0, 6, 9],\n",
+       " [1, 6, 5, 4, 6, 0, 3, 4, 5, 0, 8, 1, 6, 7, 8],\n",
+       " [4, 4, 4, 4, 4, 4, 3, 8, 6, 1, 5, 3, 3, 8, 6],\n",
+       " [3, 3, 0, 0, 5, 8, 6, 7, 0, 2, 7, 5, 7, 8, 3],\n",
+       " [9, 6, 0, 4, 2, 5, 4, 6, 3, 6, 6, 5, 6, 9, 1]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -106,13 +126,13 @@
     "# Create a list that is 50,000 rows long, where each item in the list\n",
     "# is a nested list of 200 random values.\n",
     "awkward_array = []\n",
-    "for i in range(rows):\n",
-    "    row = []\n",
-    "    for j in range(cols):\n",
-    "        row.append(int(10*random.random()))\n",
-    "    awkward_array.append(row)\n",
+    "for row in range(rows):\n",
+    "    row_values = []\n",
+    "    for coumn in range(cols):\n",
+    "        row_values.append(int(10*random.random()))\n",
+    "    awkward_array.append(row_values)\n",
     "\n",
-    "# display a small subset of this \"array\"\n",
+    "# display a small subset of this \"array\" (last 15 values of the last 10 columns)\n",
     "[row[:15] for row in awkward_array[:10]]"
    ]
   },
@@ -127,14 +147,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4.51134, 4.5079, 4.50714, 4.4971, 4.5175]\n"
+     ]
+    }
+   ],
    "source": [
     "# For each column, collect all values in the column and then compute the average.\n",
     "meanvals = []\n",
-    "for j in range(cols):\n",
-    "    col = [row[j] for row in awkward_array]\n",
+    "for column in range(cols):\n",
+    "    col = [row[column] for row in awkward_array]\n",
     "    meanvals.append(sum(col) / float(rows))\n",
     "    \n",
     "print(meanvals[:5])"
