removed last individual i

--- a/PythonBootcamp/02_Basic_Python_II_Control_Flow_and_Functions.ipynb
+++ b/PythonBootcamp/02_Basic_Python_II_Control_Flow_and_Functions.ipynb
@@ -345,7 +345,7 @@
     "for number in range(10):\n",
     "    if number == 3:\n",
     "        break\n",
-    "    print(i)"
+    "    print(number)"
    ]
   },
   {
