feat: Adds section discussing problems conda solves

--- a/PythonBootcamp/09_Conda_Environments.ipynb
+++ b/PythonBootcamp/09_Conda_Environments.ipynb
@@ -18,7 +18,25 @@
     "<center><h1>Conda</h1></center>\n",
     "\n",
     "\n",
-    "<p>Conda is an open source package management system and environment management system. To make your project reproducible and to ensure the package dependencies are self-contained, you can build your project in a conda environment that is separate from your main python distribution. The conda package and environment manager is included in all versions of Anaconda, Miniconda, and Anaconda Repository.\n",
+    "<p><a href=\"https://docs.conda.io/en/latest/\">Conda</a> is an open source package management system and environment management system. To make your project reproducible and to ensure the package dependencies are self-contained, you can build your project in a conda environment that is separate from your main python distribution. The conda package and environment manager is included in all versions of Anaconda, Miniconda, and Anaconda Repository.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
+    "<center><h2>Benefits of Conda Environments</h2></center>\n",
+    "\n",
+    "<p>Without containing python packages in isolated environments, you might get faced with conflicting dependencies. Suppose you have a python library that only works <i>up to</i> python version 3.7 and you have another library that only works <i>from</i> python 3.8. If you want to run these libraries independently of each other, then it is easily done by creating separate conda environments: one that runs against python 3.7, and one that runs against python 3.8. Overall, conda allows you to:\n",
+    "<ul>\n",
+    "<li> Ensure your code and dependencies are platform independent (there are occasional caveats)\n",
+    "<li> Run a specific version of python\n",
+    "<li> Easily install a curated list of dependencies\n",
+    "<li> Easily share your code and package dependencies (it was a common problem before conda that code works fine on your machine, but others wer unable to run it)\n",
+    "<li> No risk of messing up your system libraries (your operating system might be running python packages and you might brick your computer if you mess around with system libraries!)\n",
+    "</ul>\n",
     "</div>"
    ]
   },
@@ -36,6 +54,8 @@
     "<pre><code>\n",
     "conda create -n myenv python=3.8\n",
     "</code></pre>\n",
+    "    \n",
+    "<p>(Note: for this course, we'll be using python version 3.8)\n",
     "\n",
     "<p>Once created, you can activate the new environment:\n",
     "<pre><code>\n",
