feat: Adds a few extra notes and a summary

--- a/PythonBootcamp/09_Conda_Environments.ipynb
+++ b/PythonBootcamp/09_Conda_Environments.ipynb
@@ -164,6 +164,7 @@
     "<li> Pip requires a python interpreter to already be installed. Conda can install a python interpreter itself, which is how it is able to set up a python environment.\n",
     "<li> Not all packages available on PyPI can be installed via conda.\n",
     "<li> However, it is possible to install and run pip from within a conda environment.\n",
+    "<li> Conda lets you install packages like pip, but the packages conda downloads from as default are specifically curated for scientific use.\n",
     "</ul>\n",
     "</div>"
    ]
@@ -177,9 +178,12 @@
     "\n",
     "<p> When you create a conda environment:\n",
     "<ul>\n",
+    "<li> When you \"activate\" an environment in a terminal, you are telling conda \"this is the environment I want to use right now in this terminal.\"\n",
     "<li> The environment persists and won't go away unless you explicitly remove it\n",
     "<li> You can activate the environment in another console if desired. Anything installed in an environment on one console will be available in the other console.\n",
     "<li> As default, when you open a console it will be set to the base environment. You'll need to activate your desired environment at each session.\n",
+    "<li> If you have multiple projects, you may want to have different packages available to each project. Conda helps you set up an \"environment\" for each project so that their packages stay separate from each other. (Maybe you have very old code that hasn't been upgraded to run in python3. You can run that code in its own conda environment, and still run pandas in python3 in a separate environment.)\n",
+    "<li> <code>conda install</code> and <code>pip install</code> only affect the active environment (keeping others safe from your mistakes)\n",
     "</ul>\n",
     "</div>"
    ]
@@ -218,6 +222,23 @@
     "<li> <b>Run</b>: <pre><code>conda env create -f swdb_2022.yml</code></pre>\n",
     "<li> <b>Run</b>: <pre><code>conda activate swdb_2022</code></pre>\n",
     "<li> That's it! You should now have all the libraries installed that you need for the course.\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
+    "<center><h2>Summary</h2></center>\n",
+    "\n",
+    "<ul>\n",
+    "<li> Conda allows you to create and activate an isolated environment to install packages needed for your project.\n",
+    "<li> You can create multiple environments with different sets of installed packages.\n",
+    "<li> You can use <code>conda install</code> to install pacakges from conda's curated repository of packages, or you can use <code>pip install</code> to install packages from PyPI.\n",
+    "<li> You can share the environment you created as a yaml file that allows others to recreate your isolated conda environment on their machine.\n",
+    "<li> You can select an environment to use when running notebooks (with some effort).\n",
     "</ul>\n",
     "</div>"
    ]
