feat: Adds section about JupyterHub

--- a/PythonBootcamp/08_Development_Tools.ipynb
+++ b/PythonBootcamp/08_Development_Tools.ipynb
@@ -160,6 +160,30 @@
    "metadata": {},
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
+    "<h2>JupyterHub</h2>\n",
+    "\n",
+    "<p>A Jupyter Notebook is a decent starting place for a single user to run python interactively. <b>JupyterHub</b> is a great place to host Jupyter Notebooks for multiple users, such as a class of students. From the documentation: <i>JupyterHub is a multi-user server that manages and proxies multiple instances of the single-user Jupyter notebook server.</i> Essentially, you log into JupyterHub and are given your own notebook instance.\n",
+    "    \n",
+    "<p><h3>Pros:</h3>\n",
+    "<ul>\n",
+    "<li>An admin can spin up JupyterHub that users can access via a web url (the burden of setting up and maintenance is offloaded to a tech team)\n",
+    "<li>Users can more easily share their notebooks with colleagues\n",
+    "<li>Can connect to data stored externally from your own computer (no need to download large datasets onto your laptop!)\n",
+    "</ul>\n",
+    "\n",
+    "<p><h3>Cons:</h3>\n",
+    "<ul>\n",
+    "<li>Useful for multiple users, but not necessary for a single user\n",
+    "<li>Requires additional administration and maintenance than a running a single notebook server\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "<h2>PyCharm or Visual Studio Code (IDEs)</h2>\n",
     "\n",
     "<p><a href=\"https://www.jetbrains.com/pycharm/\">PyCharm</a> and <a href=\"https://code.visualstudio.com\">Visual Studio Code</a> are a popular integrated development environments. They include fully-featured text editors, excellent debugging tools, interactive data browsing, project management, and version control integration. They are easy to install but are <b>not</b> included with Anaconda.\n",
