feat: Fixes typo

--- a/PythonBootcamp/08_Development_Tools.ipynb
+++ b/PythonBootcamp/08_Development_Tools.ipynb
@@ -168,13 +168,13 @@
     "<ul>\n",
     "<li>An admin can spin up JupyterHub that users can access via a web url (the burden of setting up and maintenance is offloaded to a tech team)\n",
     "<li>Users can more easily share their notebooks with colleagues\n",
-    "<li>Can connect to data stored externally from your own computer (no need to download large datasets onto your laptop!)\n",
+    "<li>Can connect to data stored externally from your own computer (no need to download large data sets onto your laptop!)\n",
     "</ul>\n",
     "\n",
     "<p><h3>Cons:</h3>\n",
     "<ul>\n",
     "<li>Useful for multiple users, but not necessary for a single user\n",
-    "<li>Requires additional administration and maintenance than a running a single notebook server\n",
+    "<li>Requires additional administration and maintenance than running a single notebook server\n",
     "</ul>\n",
     "</div>"
    ]
