--- a/PythonBootcamp/06_Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/06_Introduction_to_Pandas.ipynb
@@ -96,9 +96,7 @@
     "* Ordered collection of columns\n",
     "* Each column can be a different value type (numeric, string, boolean, etc.)\n",
     "\n",
-    "    \n",
-    "<img src=\"support_files/images/pandas/dataframe_example.png\">\n",
-    "\n"
+    "<img src=\"support_files/images/pandas/dataframe_example.png\">     \n"
    ]
   },
   {
