feat: Updates section to be about JupyterLab instead of JupyterHub

--- a/PythonBootcamp/08_Development_Tools.ipynb
+++ b/PythonBootcamp/08_Development_Tools.ipynb
@@ -160,21 +160,23 @@
    "metadata": {},
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
-    "<h2>JupyterHub</h2>\n",
+    "<h2>JupyterLab</h2>\n",
     "\n",
-    "<p>A Jupyter Notebook is a decent starting place for a single user to run python interactively. <b>JupyterHub</b> is a great place to host Jupyter Notebooks for multiple users, such as a class of students. From the documentation: <i>JupyterHub is a multi-user server that manages and proxies multiple instances of the single-user Jupyter notebook server.</i> Essentially, you log into JupyterHub and are given your own notebook instance.\n",
-    "    \n",
+    "<p>JupyterLab is a web-based interface that helps a user manage their documents and data.\n",
+    "\n",
+    "\n",
     "<p><h3>Pros:</h3>\n",
     "<ul>\n",
-    "<li>An admin can spin up JupyterHub that users can access via a web url (the burden of setting up and maintenance is offloaded to a tech team)\n",
-    "<li>Users can more easily share their notebooks with colleagues\n",
-    "<li>Can connect to data stored externally from your own computer (no need to download large data sets onto your laptop!)\n",
+    "<li>Has a modular structure where you can open several notebooks as tabs in the same window.\n",
+    "<li>Offers a more IDE-like experience.\n",
+    "<li>You can test code snippets in a separate console. Some notebook users test code in a dedicated cell at the bottom of their notebook, which can be error prone.\n",
+    "<li>Inherits all the pros of Jupyter Notebooks.\n",
     "</ul>\n",
     "\n",
     "<p><h3>Cons:</h3>\n",
     "<ul>\n",
-    "<li>Useful for multiple users, but not necessary for a single user\n",
-    "<li>Requires additional administration and maintenance than running a single notebook server\n",
+    "<li>The extra features might be more daunting to a beginner than just a Jupyter Notebook.\n",
+    "<li>Some users complain that certain plotting libraries are more difficult to install and run in JupyterLab than Jupyter Notebook, although there is debate on that topic.\n",
     "</ul>\n",
     "</div>"
    ]
