--- a/PythonBootcamp/09_Conda_Environments.ipynb
+++ b/PythonBootcamp/09_Conda_Environments.ipynb
@@ -231,7 +231,7 @@
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "<center><h2>Creating the SWDB Environment</h2></center>\n",
     "\n",
-    "<p>Now that we have practice creating a conda environment, let's create annvironment and install the dependencies we'll need for the remainder of the course.\n",
+    "<p>Now that we have practice creating a conda environment, let's create an environment and install the dependencies we'll need for the remainder of the course.\n",
     "<ul>\n",
     "<li> <b>Download</b> the swdb.yml file [TODO: Add link to yaml file]\n",
     "<li> <b>Run</b>: <pre><code>conda env create -f swdb_2022.yml</code></pre>\n",
