--- a/PythonBootcamp/06_Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/06_Introduction_to_Pandas.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "**DataFrame Object**\n",
     "    \n",
-    "A Pandas DataFrame is a two-dimensional size-mutable, potentially heterogeneous tabular data structure with labeled axes (rows and columns). A Data frame is a two-dimensional data structure, i.e., data is aligned in a tabular fashion in rows and columns like a spreadsheet or SQL table, or a dict of Series objects. Pandas DataFrame consists of three principal components, the data, rows, and columns.\n",
+    "A Pandas DataFrame is a two-dimensional size-mutable, potentially heterogeneous tabular data structure. Data is aligned in a tabular fashion with labeled rows and columns like a spreadsheet or SQL table, or a dict of Series objects. Essentially, a Pandas DataFrame consists of three components, the data, rows, and columns.\n",
     "***\n",
     "Key takeaways: \n",
     "* Represents a tabular, spreadsheet-like data structure\n",
@@ -137,12 +137,12 @@
     "\n",
     "* Wide:\n",
     "    * does not repeat values in a specific categorical column.\n",
-    "    * typically better for analysis\n",
+    "    * typically better for analysis (please envision a huge grain of salt added to this statement)\n",
     "    * methods for creating(covered later): <code>df.pivot()</code> and <code>pd.pivot_table(df)</code> can reshape a long dataframe into a wide dataframe\n",
     "    \n",
     "* Long:\n",
     "    * values repeat in a specific categorical column.\n",
-    "    * typically better for data visualization.\n",
+    "    * typically better for data visualization.(please envision a huge grain of salt added to this statement)\n",
     "    * methods for creating(covered later): <code>pd.melt(df)</code> can reshape a wide dataframe into a long dataframe     \n",
     "\n",
     "\n",
@@ -258,13 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "csv_path = os.path.join('support_files/datasets', 'MessySuperStoreData.csv')\n",
+    "csv_path = os.path.join('support_files', 'datasets', 'MessySuperStoreData.csv')\n",
     "df = pd.read_csv(csv_path, index_col='Row ID')"
    ]
   },
@@ -324,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +746,7 @@
        "[17531 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1108,7 @@
        "[8 rows x 32 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,14 +1447,14 @@
     "beause pandas is built off of numpy, many familiar functions/methods work with DataFrames    \n",
     "\n",
     "* **[numpys shape function](https://numpy.org/doc/stable/reference/generated/numpy.shape.html)** can give the dimensions of a dataframe\n",
-    "    * <code>np.shape(df)</code> - returns (rows, columns)\n",
+    "    * <code>df.shape</code> - returns (rows, columns)\n",
     "* **[len()](https://docs.python.org/3/library/functions.html#len)** - the built in python function will return the number of rows in a dataframe\n",
     "    * <code>len(df)</code>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1456,18 +1463,18 @@
        "(17531, 32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.shape(df)"
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1483,7 @@
        "17531"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1506,7 @@
     "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
     "<h4>List Columns</h4>\n",
     "\n",
-    "**[.columns](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.columns.html)** provides a list of the column lables for a dataframe\n",
+    "**[.columns](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.columns.html)** provides a list of the column labels for a dataframe\n",
     "    \n",
     "<code>df.columns</code>"
    ]
@@ -2448,23 +2455,25 @@
     "\n",
     "<h3> Internal Links </h3>\n",
     "    \n",
-    "**background on views and copies**\n",
-    "* <a href='#views_descrip'>description of what views vs copies are</a>\n",
-    "* <a href='#copy'>create a copy</a>\n",
-    "* <a href='#inplace'>modifying data inplace</a>   \n",
-    "    \n",
-    "\n",
     "**basic data selection & filtering**\n",
     "* <a href='#row_vs_index'>a note on rows vs index (.values)</a>\n",
     "* <a href='#iloc'>select data by integer Index/position</a>\n",
     "* <a href='#loc'>select data by labels/names</a>\n",
     "\n",
+    "**background on views and copies**\n",
+    "* <a href='#views_descrip'>description of what views vs copies are</a>\n",
+    "* <a href='#copy'>create a copy</a>\n",
+    "* <a href='#inplace'>modifying data inplace</a>   \n",
+    " \n",
     "    \n",
     "**advanced data selection**\n",
     "* <a href='#conditionalselection'>select data for a given condition or threshold</a>\n",
     "* <a href='#conditionalselectionandreturn'>return subset of data for a given condition or threshold</a>\n",
     "* <a href='#multicondition'>select data based on multiple conditions or thresholds</a>\n",
     "* <a href='#multioptionlist'> multiple condition options using a list</a>\n",
+    "\n",
+    "\n",
+    "\n",
     "    "
    ]
   },
@@ -2596,14 +2605,14 @@
     "\n",
     "In this notebook and lecture we will use the terms row and index. For many contexts these terms are interchangable, however due to pandas nomenclature around different ways of slicing and dicing data, we will have distinct meanings for these\n",
     "    \n",
-    "**row**: row number \n",
+    "**row number**:\n",
     "    \n",
-    "**index**: label given to a specific index(row)\n",
+    "**index**: label given to a specific row\n",
     "\n",
     "<img src=\"support_files/images/pandas/pandas_row_vs_index.png\">     \n",
     "In the example image above. For the area highlighted in red:\n",
     "\n",
-    "* row: 2 (remember we start counting at 0!)\n",
+    "* row number: 2 (remember we start counting at 0!)\n",
     "* index: ZA-2014-49187"
    ]
   },
@@ -10359,6 +10368,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
+    "\n",
+    "<h4>Adding indexes</h4>\n",
+    "\n",
+    "You can add an index to a dataframe at the time of creation or later.\n",
+    "\n",
+    "During dataframe creation:\n",
+    "    \n",
+    "    example_df = pd.DataFrame({'column1': column1_data,\n",
+    "                               'column2': column2_data},\n",
+    "                                index= index_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='concat'></a>"
    ]
   },
@@ -10617,7 +10657,7 @@
    "source": [
     "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
     "\n",
-    "**Left and Right merges**\n",
+    "<h4>Left and Right merges</h4>\n",
     "\n",
     "For <code>'left'</code> and <code>'right'</code> merges, the order that you list the dataframes in the <code>.merge()</code> function matters. The first dataframe listed is the 'left' dataframe and the second is the 'right' dataframe.\n",
     "\n",
@@ -10800,7 +10840,7 @@
    "source": [
     "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
     "\n",
-    "**Inner and Outer Merges**\n",
+    "<h4>Inner and Outer Merges</h4>\n",
     "\n",
     "For <code>'inner'</code> and <code>'outer'</code> merges, the order of the dataframes does not matter. Instead the inner and outer merges are based on what is common between both dataframes.\n",
     "\n",
@@ -10901,6 +10941,196 @@
     "# Lets try an outer merge with those same dataframes\n",
     "\n",
     "pd.merge(dict_df1, list_df, how = 'outer', on ='name')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
+    "\n",
+    "<h4> <code>'left_on'</code>, <code>'right_on'</code> and index merges</h4>\n",
+    "    \n",
+    "    \n",
+    "<code>left_on</code> label or list, or array-like\n",
+    "Column or index level names to join on in the left DataFrame. Can also be an array or list of arrays of the length of the left DataFrame. These arrays are treated as if they are columns.\n",
+    "\n",
+    "<code>right_on</code> label or list, or array-like\n",
+    "Column or index level names to join on in the right DataFrame. Can also be an array or list of arrays of the length of the right DataFrame. These arrays are treated as if they are columns.\n",
+    "\n",
+    "<code>left_index</code> bool, default False\n",
+    "Use the index from the left DataFrame as the join key(s). If it is a MultiIndex, the number of keys in the other DataFrame (either the index or a number of columns) must match the number of levels.\n",
+    "\n",
+    "<code>right_index</code> bool, default False\n",
+    "Use the index from the right DataFrame as the join key. Same caveats as left_index.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.DataFrame({'x1': ['A', 'B', 'C'],\n",
+    "                    'x2': [1,2,3]}, index=['X', 'Y', 'Z'])\n",
+    "df1.index.name='x5'\n",
+    "df2 = pd.DataFrame({'x1': ['A', 'B', 'D'],\n",
+    "                    'x3': [True, False, True]}, index=['S', 'T', 'U'])\n",
+    "df2.index.name='x7'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "units = units.merge(channels, left_on='peak_channel_id', right_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = df1.merge(df2, left_on='x1', right_on='x1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "      <th>x3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  x1  x2     x3\n",
+       "0  A   1   True\n",
+       "1  B   2  False"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x1</th>\n",
+       "      <th>x2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>x5</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>X</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Y</th>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Z</th>\n",
+       "      <td>C</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x1  x2\n",
+       "x5       \n",
+       "X   A   1\n",
+       "Y   B   2\n",
+       "Z   C   3"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1"
    ]
   },
   {
