fix: Fixes typo

--- a/PythonBootcamp/09_Conda_Environments.ipynb
+++ b/PythonBootcamp/09_Conda_Environments.ipynb
@@ -167,7 +167,7 @@
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "<h2>The difference between conda install and pip install</h2>\n",
     "\n",
-    "<p> In the previous section, we demostrated how to install packages into an environment using both conda and pip. Here we'll discuss some key differences between conda and pip.\n",
+    "<p> In the previous section, we demonstrated how to install packages into an environment using both conda and pip. Here we'll discuss some key differences between conda and pip.\n",
     "<ul>\n",
     "<li> Pip is a <b>P</b>ackage <b>I</b>nstaller for <b>P</b>ython and downloads and install packages from the Python Package Index (PyPI). Conda installs packages written in any language. \n",
     "<li> Conda can download and install packages from different online channels. As default, conda installs packages hosted from the Anaconda channel, which carefully vets the packages it hosts. There are more relaxed community channels that host packages, such as conda-forge. For the purposes of this course, we will be using the default channel.\n",
